# poc-mogest

./: CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  specs.md  tasks.md
app/: main.py
app/components/: charts.py
app/pages/: 1_Simulacao_SMAP.py  2_Rede_Hidrologica.py  3_Visualizacao_Espacial.py
core/: io.py  models.py  postprocess.py
data/: example_daily.csv  example_monthly.csv  example_network_etp.csv  example_network_params.csv  example_network_prec.csv  example_network_timeseries.csv  example_spatial.csv  example_spatial.geojson
tests/: test_models.py  test_postprocess.py
