[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "poc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mogestpy",
    "streamlit>=1.35",
    "pandas>=2.2",
    "plotly>=5.20",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "app*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
