[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poc-mogestpy"
version = "0.1.0"
requires-python = ">=3.11,<4.0"

dependencies = [
    "mogestpy>=2.0.0",
    "streamlit>=1.35",
    "pandas>=2.2",
    "plotly>=5.20",
    "numpy>=1.26",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "app*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.poetry]
package-mode = false
